--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
            <nav>
             <ul>
-                <li><a href="#home"><i class="fa-solid fa-house"></i> Home</a></li>
-                <li><a href="#about"><i class="fa-solid fa-user"></i> About me</a></li>
-                <li><a href="#portfolio"><i class="fa-solid fa-briefcase"></i> Projects</a></li>
+                <li><a href="#home"><i class="fa-solid fa-house" target="_blank"></i> Home</a></li>
+                <li><a href="#about"><i class="fa-solid fa-user" target="_blank"></i> About me</a></li>
+                <li><a href="#portfolio"><i class="fa-solid fa-briefcase" target="_blank"></i> Projects</a></li>
                <!---- <li><a href="#service"><i class="fa-solid fa-server"></i> Services</a></li> -->
-                <li><a href="#contact"><i class="fa-solid fa-envelope"></i> Contact me</a></li>
+                <li><a href="#contact"><i class="fa-solid fa-envelope" target="_blank"></i> Contact me</a></li>
             </ul>
            </nav>
            
@@ -240,7 +240,7 @@
                                <span class="sp-box">2019-present</span>
                                <p>ABES insitute of technology</p>
                                <p>Pursuing Bachelor of Technology in Computer Science Engineering from ABES Institute of Technology,Ghaziabad affiliated from AKTU with an
-                                aggregate of 8 CGPA</p>
+                                aggregate of 7 CGPA</p>
                           </div>
                      </div>
                         <!--right cols-->
@@ -260,7 +260,7 @@
                           </div>
                      
                           <div class="pro-exp">
-                             <h3>Graphic design specialist</h3>
+                             <h3>DL DAV Model School Shaliamr Bagh</h3>
                              <span class="sp-box">2018-2019</span>
                               <p>DL DAV Model School Shaliamr Bagh</p>
 
